2024-02-16T08:18:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7927838750 # 121
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-16
* notice: last 14d: unq all: 3 4142
* notice: prev accum: outdated-unq outdated-all / unq all: 1933 188228 / 1956 192426
* notice: next accum: outdated-unq outdated-all / unq all: 1933 188228 / 1957 192537
* notice: prev exec diff / last date diff / accum: unq all: +1 +111 -0 -91 / +1 +111 -0 -0 / 1 111
* notice: removed / changed dates: [] / [2024-02-02 2024-02-16]

2024-02-16T01:04:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7924494022 # 120
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-16
* notice: last 14d: unq all: 3 4122
* notice: prev accum: outdated-unq outdated-all / unq all: 1931 187928 / 1956 192331
* notice: next accum: outdated-unq outdated-all / unq all: 1933 188228 / 1956 192426
* notice: prev exec diff / last date diff / accum: unq all: +0 +95 -0 -76 / +1 +299 -0 -0 / 1 299
* notice: removed / changed dates: [2024-02-01] / [2024-02-02 2024-02-15]

2024-02-15T16:18:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7918988045 # 119
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-15
* notice: last 14d: unq all: 3 4143
* notice: prev accum: outdated-unq outdated-all / unq all: 1931 187928 / 1956 192238
* notice: next accum: outdated-unq outdated-all / unq all: 1931 187928 / 1956 192331
* notice: prev exec diff / last date diff / accum: unq all: +0 +93 -1 -93 / +1 +204 -0 -0 / 1 204
* notice: removed / changed dates: [] / [2024-02-01 2024-02-15]

2024-02-15T08:18:05Z: