@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2024-02-16T08:18:14Z",
+  "timestamp" : "2024-02-16T16:18:22Z",
   "count_outdated" : 188228,
   "uniques_outdated" : 1933,
-  "count" : 192537,
+  "count" : 192630,
   "uniques" : 1957,
   "clones" : [
     {
       "timestamp": "2024-02-02T00:00:00Z",
-      "count": 134,
-      "count_minmax": [ 112, 301 ],
-      "count_decinc": [ 167, 301 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 40,
+      "count_minmax": [ 40, 301 ],
+      "count_decinc": [ 261, 301 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2024-02-03T00:00:00Z",
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2024-02-16T00:00:00Z",
-      "count": 111,
-      "count_minmax": [ 111, 111 ],
-      "count_decinc": [ 0, 111 ],
+      "count": 204,
+      "count_minmax": [ 111, 204 ],
+      "count_decinc": [ 0, 204 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
